Добавил и разметил price.html

--- a/catalog.html
+++ b/catalog.html
@@ -159,7 +159,7 @@
 
     <!-- Подвал -->
 
-    <footer class="footer">
+    <footer class="inner-footer">
       <div class="container">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
