--- a/price.html
+++ b/price.html
@@ -25,14 +25,46 @@
     <div class="breadcrums">
       <h1>набор для путешествий «Baxter of California»</h1>
       <a href="index.html">Главная</a>
-      <a href="#">Магазин</a>
-      <a href="#">Средства для ухода</a>
-      <a href="#">набор для путешествий «Baxter of California»</a>
+      <a href="#">Прайс-лист</a>
     </div>
-  
+
+    <div class="promo">
+      <h1>ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
+      <div class="promo-brands">
+        <h2>МЫ ИСПОЛЬЗУЕМ ТОЛЬКО  ЛУЧШИЕ СРЕДСТВА:</h2>
+        <ul>
+          <li>Baxter of California</li>
+          <li>Mr Natty</li>
+          <li>Suavecito</li>
+          <li>Malin+Goetz</li>
+        </ul>
+      </div>
+      <div class="promo-services">
+        <h2>ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h2>
+        <table>
+          <tr>
+            <td>Стрижка</td>
+            <td>1500р.</td>
+          </tr>
+          <tr>
+            <td>Стрижка бороды</td>
+            <td>500р.</td>
+          </tr>
+          <tr>
+            <td>Накрутка усов</td>
+            <td>350р.</td>
+          </tr>
+        </table>
+      </div>
+      <div class="promo-about">
+        <p>Наша парикмахерская занимается исключительно     мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+      </div>
+    </div>
+
     <!-- Подвал -->
 
-    <footer class="main-footer">
+    <footer class="inner-footer">
       <div class="container">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
