--- a/catalog-item.html
+++ b/catalog-item.html
@@ -55,7 +55,7 @@
 
     <!-- Подвал -->
 
-    <footer class="footer">
+    <footer class="inner-footer">
       <div class="container">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
