--- a/catalog.html
+++ b/catalog.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-	  <title>Заголовок окна</title>
-    <link rel="stylesheet" href="css/styll.css">
+	  <title>Barbershop</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="inner-header">
       <div class="container">
         <nav class="inner-navigation">
           <ul>
+            <li><a href="index.html" class="inner-logo"><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="price.html">Прайс-лист</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -22,140 +25,203 @@
       </div>
     </header>
 
-    <div class="breadcrums">
-      <h1>Средства для ухода</h1>
-      <a href="index.html">Главная</a>
-      <a href="#">Магазин</a>
-      <a href="#">Средства для ухода</a>
-    </div>
+    <!-- Хлебные крошки -->
 
-    <!-- Фильтры -->
+    <main class="">
+      <div class="breadcrumbs">
+        <h1>Средства для ухода</h1>
+        <ul>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><span>Средства для ухода</span></li>
+        </ul>
+      </div>
 
-    <div class="firms">
-      <label>
-        <input type="checkbox" name="baxter-of-california" checked>
-        Baxter of California
-      </label>
-      <label>
-        <input type="checkbox" name="mr-natty">
-        Mr Natty
-      </label>
-      <label>
-        <input type="checkbox" name="suavecito" checked>
-        Suavecito
-      </label>
-      <label>
-        <input type="checkbox" name="malin-goetz">
-        Malin+Goetz
-      </label>
-      <label>
-        <input type="checkbox" name="murrays">
-        Murray's
-      </label>
-      <label>
-        <input type="checkbox" name="american-crew">
-        American crew
-      </label>
-    </div>
+      <!-- Фильтры -->
 
-    <div class="group">
-      <label>
-        <input type="radio" name="group" value="oils">
-        Бритвенные принадлежности
-      </label>
-      <label>
-        <input type="radio" name="group" value="care" checked>
-        Средства для ухода
-      </label>
-      <label>
-        <input type="radio" name="group" value="accessories">Аксесуары
-      </label>
-    </div>
+      <form class="filters">
+        <fieldset class="filters-firms">
+          <legend>Производители:</legend>
+          <ul>
+            <li>
+              <label>
+              <input type="checkbox" name="baxter-of-california" checked>
+              Baxter of California
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" name="mr-natty">
+                Mr Natty
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" name="suavecito" checked>
+                Suavecito
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" name="malin-goetz">
+                Malin+Goetz
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" name="murrays">
+                Murray's
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="checkbox" name="american-crew">
+                American crew
+              </label>
+            </li>
+          </ul>
+        </fieldset>
 
-    <button type="button">Показать</button>
+        <fieldset class="filters-group">
+          <legend>Группы товаров</legend>
+          <ul>
+            <li><label>
+              <input type="radio" name="group" value="oils">
+              Бритвенные принадлежности
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="radio" name="group" value="care" checked>
+                Средства для ухода
+              </label>
+            </li>
+            <li>
+              <label>
+                <input type="radio" name="group" value="accessories">Аксесуары
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <input type="submit" name="show" value="Показать">
+      </form>
 
-    <!-- Блок товаров -->
+      <!-- Блок товаров -->
 
-    <div class="goods">
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
+      <div class="goods">
+        <div class="goods-item">
+          <a href="catalog-item.html" class="goods-image">
+            <img src="img/image-1.jpg" width="220" height="165" alt="Набор для путешествий
+            «Baxter of California»" >
+          </a>
+          <h2 class="goods-description">
+            <a href="catalog-item.html">
+              <span class="goods-category">
+              Набор для путешествий</span>
+              <span class="goods-brand">«Baxter of California»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>2900 руб.</span>
+            <a href="#">Купить</a>
+          </div>
         </div>
-        <p class="goods-description">
-        Набор для путешествий
-        «Baxter of California»</p>
-        <div class="goods-buy">
-          <span>2900 руб.</span>
-          <a href="#">Купить</a>
+
+        <div class="goods-item">
+          <a href="#" class="goods-image">
+            <img src="img/image-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер
+            «Baxter of California»">
+          </a>
+          <h2 class="goods-description">
+            <a href="#">
+              <span class="goods-category">Увлажняющий кондиционер</span>
+              <span class="goods-brand">«Baxter of California»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>750 руб.</span>
+            <a href="#">Купить</a>
+          </div>
+        </div>
+
+        <div class="goods-item">
+          <a href="#" class="goods-image">
+            <img src="img/image-3.jpg" width="220" height="165" alt="Гель для волос
+            «SUAVECITO»">
+          </a>
+          <h2 class="goods-description">
+            <a href="#">
+              <span class="goods-category">Гель для волос</span>
+              <span class="goods-brand">«SUAVECITO»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>290 руб.</span>
+            <a href="#">Купить</a>
+          </div>
+        </div>
+
+        <div class="goods-item">
+          <a href="#" class="goods-image">
+            <img src="img/image-4.jpg" width="220" height="165" alt="Глина для укладки волос
+            «American crew»">
+          </a>
+          <h2 class="goods-description">
+            <a href="#">
+              <span class="goods-category">Глина для укладки волос</span>
+              <span class="goods-brand">«American crew»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>500 руб.</span>
+            <a href="#">Купить</a>
+          </div>
+        </div>
+
+        <div class="goods-item">
+          <a href="#" class="goods-image">
+            <img src="img/image-5.jpg" width="220" height="165" alt="Гель для волос
+            «AMERICAN CREW»">
+          </a>
+          <h2 class="goods-description">
+            <a href="#">
+              <span class="goods-category">Гель для волос</span>
+              <span class="goods-brand">«AMERICAN CREW»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>300 руб.</span>
+            <a href="#">Купить</a>
+          </div>
+        </div>
+
+        <div class="goods-item">
+          <a href="#" class="goods-image">
+            <img src="img/image-6.jpg" width="220" height="165" alt="Набор для бритья
+            «Baxter of California»">
+          </a>
+          <h2 class="goods-description">
+            <a href="#">
+              <span class="goods-category">Набор для бритья</span>
+              <span class="goods-brand">«Baxter of California»</span>
+            </a>
+          </h2>
+          <div class="goods-buy">
+            <span>3900 руб.</span>
+            <a href="#">Купить</a>
+          </div>
         </div>
       </div>
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
-        </div>
-        <p class="goods-description">
-        Увлажняющий кондиционер
-        «Baxter of California»</p>
-        <div class="goods-buy">
-          <span>750 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-      </div>
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
-        </div>
-        <p class="goods-description">
-        Гель для волос
-        «SUAVECITO»</p>
-        <div class="goods-buy">
-          <span>290 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-      </div>
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
-        </div>
-        <p class="goods-description">
-        Глина для укладки волос  «American crew»</p>
-        <div class="goods-buy">
-          <span>500 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-      </div>
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
-        </div>
-        <p class="goods-description">
-        Гель для волос «AMERICAN CREW»</p>
-        <div class="goods-buy">
-          <span>300 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-      </div>
-      <div class="goods-item">
-        <div class="goods-image">
-          <img src="img/some.png" width="" height="">
-        </div>
-        <p class="goods-description">
-        Набор для бритья «Baxter of California»</p>
-        <div class="goods-buy">
-          <span>3900 руб.</span>
-          <a href="#">Купить</a>
-        </div>
-      </div>
-    </div>
 
-    <!-- Переключатель страниц -->
+      <!-- Переключатель страниц -->
 
-    <div class="page-selector">
-      <a href="#">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-    </div>
+      <ul class="page-selector">
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+      </ul>
+   </main>
 
     <!-- Подвал -->
 
