--- a/price.html
+++ b/price.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-	  <title>Заголовок окна</title>
-    <link rel="stylesheet" href="css/styll.css">
+	  <title>Barbershop</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="inner-header">
       <div class="container">
         <nav class="inner-navigation">
           <ul>
+            <li><a href="index.html" class="inner-logo"></a></li>
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="price.html">Прайс-лист</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -22,45 +25,52 @@
       </div>
     </header>
 
-    <div class="breadcrums">
-      <h1>набор для путешествий «Baxter of California»</h1>
-      <a href="index.html">Главная</a>
-      <a href="#">Прайс-лист</a>
-    </div>
+    <main class="">
 
-    <div class="promo">
-      <h1>ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
-      <div class="promo-brands">
-        <h2>МЫ ИСПОЛЬЗУЕМ ТОЛЬКО  ЛУЧШИЕ СРЕДСТВА:</h2>
+    <!-- Хлебные крошки -->
+
+      <div class="breadcrumbs">
+        <h1>набор для путешествий «Baxter of California»</h1>
         <ul>
-          <li>Baxter of California</li>
-          <li>Mr Natty</li>
-          <li>Suavecito</li>
-          <li>Malin+Goetz</li>
+          <li><a href="index.html">Главная</a></li>
+          <li>Прайс-лист</li>
         </ul>
       </div>
-      <div class="promo-services">
-        <h2>ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h2>
-        <table>
-          <tr>
-            <td>Стрижка</td>
-            <td>1500р.</td>
-          </tr>
-          <tr>
-            <td>Стрижка бороды</td>
-            <td>500р.</td>
-          </tr>
-          <tr>
-            <td>Накрутка усов</td>
-            <td>350р.</td>
-          </tr>
-        </table>
+
+      <div class="promo">
+        <h1>ИСТИННО МУЖСКАЯ КЛАССИКА</h1>
+        <div class="promo-brands">
+          <h2>МЫ ИСПОЛЬЗУЕМ ТОЛЬКО  ЛУЧШИЕ СРЕДСТВА:</h2>
+          <ul>
+            <li>Baxter of California</li>
+            <li>Mr Natty</li>
+            <li>Suavecito</li>
+            <li>Malin+Goetz</li>
+          </ul>
+        </div>
+        <div class="promo-services">
+          <h2>ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h2>
+          <table>
+            <tr>
+              <td>Стрижка</td>
+              <td>1500р.</td>
+            </tr>
+            <tr>
+              <td>Стрижка бороды</td>
+              <td>500р.</td>
+            </tr>
+            <tr>
+              <td>Накрутка усов</td>
+              <td>350р.</td>
+            </tr>
+          </table>
+        </div>
+        <div class="promo-about">
+          <p>Наша парикмахерская занимается исключительно     мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+          <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+        </div>
       </div>
-      <div class="promo-about">
-        <p>Наша парикмахерская занимается исключительно     мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
-      </div>
-    </div>
+    </main>
 
     <!-- Подвал -->
 
