--- a/catalog-item.html
+++ b/catalog-item.html
@@ -47,13 +47,13 @@
           <div class="item-gallery-preview">
             <img src="img/item-prev-1.jpg" width="166" height="175" alt="Travel Kit">
             <img src="img/item-prev-2.jpg" width="166" height="175" alt="Travel Kit">
-            <img src="img/item-prev-3166.jpg" width="166" height="175" alt="Travel Kit">
+            <img src="img/item-prev-3.jpg" width="166" height="175" alt="Travel Kit">
           </div>
         </div>
         <div class="item-details">
           <b>Есть в наличии</b>
           <span>Артикул: dexter-ae</span>
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия.</p>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
         </div>
         <div class="item-buy">
           <span>2900 руб.</span>
