--- a/catalog.html
+++ b/catalog.html
@@ -217,7 +217,7 @@
 
       <ul class="page-selector">
         <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
+        <li><span>2</span></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
       </ul>
