--- a/catalog.html
+++ b/catalog.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
 	  <title>Barbershop</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="inner-header">
       <div class="container clearfix">
-        <nav class="inner-navigation">
-          <a href="index.html" class="inner-logo"><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a>
-          <ul>
+        <nav class="inner-navigation clearfix">
+          <a class="inner-logo" href="index.html" ><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a>
+          <ul class="inner-menu"
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
