--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,12 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
-    <header class="inner-header">
+  <body class="inner-page-bg">
+    <header class="main-header">
       <div class="container clearfix">
-        <nav class="inner-navigation clearfix">
-          <a class="inner-logo" href="index.html" ><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a>
-          <ul class="inner-menu"
+        <nav class="main-navigation clearfix">
+          <a class="logo" href="index.html" ><img src="img/cat-logo.png" width="111" height="24" alt="Бородинский"></a>
+          <ul class="main-menu">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="price.html">Прайс-лист</a></li>
@@ -106,7 +106,7 @@
               </li>
             </ul>
           </fieldset>
-          <input type="submit" name="show" value="Показать">
+          <button class="btn" type="submit" name="show" value="Показать">Показать</button>
         </form>
 
         <!-- Блок товаров -->
@@ -125,8 +125,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>2900 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">2900 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
 
@@ -142,8 +142,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>750 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">750 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
 
@@ -159,8 +159,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>290 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">290 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
 
@@ -176,8 +176,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>500 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">500 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
 
@@ -193,8 +193,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>300 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">300 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
 
@@ -210,8 +210,8 @@
               </a>
             </h2>
             <div class="goods-buy">
-              <span>3900 руб.</span>
-              <a href="#">Купить</a>
+              <span class="btn-lightgray">3900 руб.</span>
+              <a class="btn" href="#">Купить</a>
             </div>
           </div>
         </div>
